--- a/Todolist/.doom.d/org/todolist.org
+++ b/Todolist/.doom.d/org/todolist.org
@@ -4,12 +4,23 @@
 # Spc-m-t-s in progress
 ======= 2/21 - 2/ 27 =======
 
-* All
-** TODO Study Physics for Midterm
+* Weekly
+** TODO Study Physics for Midterm [3/9]
+*** [X] APB_MC01
+*** [X] APB_MC02
+*** [X] APB_MC03
+*** [ ] APB_MC04
+*** [ ] APB_MC05
+*** [ ] APB_MC06
+*** [ ] APB_MC07
+*** [ ] APB_MC08
+*** [ ] APB_MC09
 ** TODO Create own tutoring service and website? how would that work over summer?
-** TODO vncx11 Server with ipad for to-do list?
-** DONE Emacs - Org Mode
-
+* Daily Routine [0/4]
+** [ ] 7:30-7:55 Eat Breakfast
+** [ ] 10:55-11:20 Workout
+** [ ] 1:15-1:35 Shower
+** [ ] 6:00-6:45 Walk Bailey
 * School
 ** Monday
 ***
@@ -17,15 +28,15 @@
 *** DONE Film three scenes for Video-Film
 ** Wedensday
 *** DONE Math due @ 2:40
-*** TODO Physics Lab
-*** TODO Amanda meeting @ 2pm - Mention idea of aeronautics/Diversify with tutoring?
-*** TODO Act Book Review
+*** DONE Physics Lab
+*** DONE Amanda meeting @ 2pm - Mention idea of aeronautics/Diversify with tutoring?
+*** STRT Act Book Review
 ** Thursday
 *** TODO Matt Act Prep @ 4pm
 ** Friday
 ***
 ** Saturday
 *** TODO Check LA Website for Vax/Temecula?
-*** TODO Hangout With Nathan to study phyics. What Time?
+*** TODO Hangout With Nathan to study phyics (MCQ + FRQ). What Time?
 ** Sunday
 ***
