--- a/DoomEmacs/.doom.d/org/todolist.org
+++ b/DoomEmacs/.doom.d/org/todolist.org
@@ -4,22 +4,36 @@
 # Spc-m-t-s in progress
 ======= 2/21 - 2/ 27 =======
 * Weekly
-** TODO Study Physics for Midterm [3/9]
-*** [X] APB_MC01
-*** [X] APB_MC02
-*** [X] APB_MC03
-*** [ ] APB_MC04
-*** [ ] APB_MC05
-*** [ ] APB_MC06
-*** [ ] APB_MC07
-*** [ ] APB_MC08
-*** [ ] APB_MC09
+** TODO Study Physics for Midterm
+*** MC Sheets [6/9]
+**** [X] APB_MC01
+**** [X] APB_MC02
+**** [X] APB_MC03
+**** [X] APB_MC04
+**** [X] APB_MC05
+**** [X] APB_MC06
+**** [ ] APB_MC08
+**** [ ] APB_MC07
+**** [ ] APB_MC09
+*** Equations & Topics
+**** p=mv
+**** pe=mgh
+**** ke=1/2mv^2
+**** W=Fx
+**** P=W/t
+**** Us=1/2kx^2
+**** Fs=-kx
+**** T=2pisqrt(m/k)
+**** T=2pisqrt(l/g)
+**** Fparallel=mgsin(0)
+**** Fperp=mgcos(0)
+**** deletap=mdeleta v / deltap=Ft
 ** TODO Create own tutoring service and website? how would that work over summer?
-* Daily Routine [3/4]
+* Daily Routine [4/4]
 ** [X] 7:30-7:55 Eat Breakfast
 ** [X] 10:55-11:20 Workout
 ** [X] 1:15-1:35 Shower
-** [ ] 6:00-6:45 Walk Bailey
+** [X] 6:00-6:45 Walk Bailey
 * School
 ** Monday
 *** TODO RA in English. Pull up Notes etc.
@@ -28,13 +42,14 @@
 ** Wedensday
 *** TODO
 ** Thursday
-*** TODO 1:50-2:50 Phsyics 3 worksheets
-*** TODO 3:00-3:50 English Quizlet
-*** TODO 4:00-5:00 Matt Act Prep
+*** DONE 1:50-2:50 Phsyics 3 worksheets
+*** DONE 3:00-3:50 English Quizlet
+*** DONE 4:00-5:00 Matt Act Prep
 ** Friday
-***
+*** TODO 3 More Physics Worksheets
 ** Saturday
 *** TODO Check LA Website for Vax/Temecula?
 *** TODO Hangout With Nathan to study phyics (MCQ + FRQ). What Time?
 ** Sunday
-***
+*** Go over equations and their respective topics
+*** Review Ap Rhetorical Analysis rubric, examples, etc
