--- a/DoomEmacs/.doom.d/org/todolist.org
+++ b/DoomEmacs/.doom.d/org/todolist.org
@@ -26,9 +26,8 @@
 ** Thursday
 *** TODO
 ** Friday
-*** TODO Research Forms (I might only have do two since I frontloaded some last time. (Did 6 before)) Mark stuff as done
+*** STRT Research Forms (I might only have do two since I frontloaded some last time. (Did 6 before)) Mark stuff as done
 *** TODO Review Special Words and their meanings for the act, as well as punctuation and what each one does. Make a quizlet if needed.
-*** TODO Lunch in Afternoon?
 ** Saturday
 *** TODO See if nathan is free for golf today
 *** TODO Do the Hard Math Problems in Matt's book
