--- a/DoomEmacs/.doom.d/localorgbackup/school.org
+++ b/DoomEmacs/.doom.d/localorgbackup/school.org
@@ -5,7 +5,8 @@
 *** TODO Argument Timed Write
 SCHEDULED: <2021-04-19 Mon>
 ** Tuesday
-*** TODO
+*** TODO Math Final Four
+SCHEDULED: <2021-04-20 Tue>
 ** Wedensday
 *** TODO
 ** Thursday
@@ -13,8 +14,7 @@ SCHEDULED: <2021-04-19 Mon>
 ** Friday
 *** TODO
 ** Saturday
-*** TODO Test English Practice Thing
-SCHEDULED: <2021-04-17 Sat>
+*** TODO
 ** Sunday
 *** TODO Read over argument essay timed stuff
 SCHEDULED: <2021-04-18 Sun>
