--- a/DoomEmacs/.doom.d/config.org
+++ b/DoomEmacs/.doom.d/config.org
@@ -97,7 +97,6 @@ These are the settings for my email client. Currently the mu4e-get-mail-command 
         ("/gmail/Trash"      . ?t)))
 #+end_src
 
-
 ** Emacs Specefic Settings
 A lumpsome of random settings that make me more comfortable using Emacs
 
@@ -171,7 +170,7 @@ This is the majority of my config. This hosts settings for regular org mode as w
     (setq org-agenda-start-day nil))  ; today
 
 (setq org-agenda-files (directory-files-recursively "~/Dropbox/Org/" "\\.org$")) ; Adds All org files from Dropbox to Agenda
-(setq org-agenda-files (remove "~/Dropbox/Org/WorkHours.org" org-agenda-files))  ; Removes WorkHours from Agenda View
+(setq org-agenda-files (remove "~/Dropbox/Org/Projects/Work/Hours.org" org-agenda-files))  ; Removes WorkHours from Agenda View
 
 (defun org-agenda-auto-refresh-agenda-buffer () ; Auto updates Agenda Buffer if a new file is synced from phone
   (when (org-agenda-file-p)
@@ -205,6 +204,25 @@ These are the done states that I use. Anything after the | are done states, anyt
         (setq org-log-done 'time))     ; Adds a closed timestamp when marking tasks as done
 #+end_src
 
+*** Org-Journal
+*** Org-Roam
+Here is my roam configuration
+
+#+begin_src emacs-lisp
+(use-package org-roam
+      :ensure t
+      :hook
+      (after-init . org-roam-mode)
+      :custom
+      (org-roam-directory (file-truename "~/Dropbox/Org"))
+      :bind (:map org-roam-mode-map
+              (("C-c n l" . org-roam)
+               ("C-c n f" . org-roam-find-file)
+               ("C-c n g" . org-roam-graph))
+              :map org-mode-map
+              (("C-c n i" . org-roam-insert))
+              (("C-c n I" . org-roam-insert-immediate))))
+#+end_src
 
 ** Treemacs
 Here I set the inital view for treemacs and other settings. Note, the treemacs-persist file is hardcoded and only has read permissions to not be overwritten
@@ -225,6 +243,7 @@ Here I set the inital view for treemacs and other settings. Note, the treemacs-p
 ** Daily Journaling
 Here are the settings and configs for my daily journal
 
+*** Function that toggles bullet journal
 #+begin_src emacs-lisp
 (defun isamert/toggle-side-bullet-org-buffer () ; Function that toggles journal
   "Toggle `bullet.org` in a side buffer for quick note taking.  The buffer is opened in side window so it can't be accidentaly removed."
@@ -269,7 +288,7 @@ Here are the settings and configs for my daily journal
 Here I set the default view for when emacs launches
 
 #+begin_src emacs-lisp
-(add-hook 'emacs-startup-hook 'treemacs)                     ; Auto open treemacs on launch
+;(add-hook 'emacs-startup-hook 'treemacs)                     ; Auto open treemacs on launch
 (add-hook 'after-init-hook (lambda () (org-agenda nil "w"))) ; Auto open agenda to weekly view
 #+end_src
 
