redoscript to have spaces

--- a/DoomEmacs/.doom.d/config.org
+++ b/DoomEmacs/.doom.d/config.org
@@ -289,6 +289,6 @@ Here I set the default view for when emacs launches
 
 #+begin_src emacs-lisp
 ;(add-hook 'emacs-startup-hook 'treemacs)                     ; Auto open treemacs on launch
-(add-hook 'after-init-hook (lambda () (org-agenda nil "w"))) ; Auto open agenda to weekly view
+;(add-hook 'after-init-hook (lambda () (org-agenda nil "w"))) ; Auto open agenda to weekly view
 #+end_src
 
